--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "documentation-readme": "^2.0.0",
     "tap": "^2.2.0"
+  },
+  "dependencies": {
+    "dsv": "0.0.5"
   }
 }
